--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1> Odin Recipes </h1>
-    <a href="recipes/souffle.html">Souffle</a>
+    <ul>
+
+
+    
+    <li><a href="recipes/souffle.html">Souffle</a></li>
+    <li><a href="recipes/potato.html">Potato</a></li>
+    <li><a href="recipes/sushi.html">Sushi</a></li>
+
+</ul>
 </body>
 </html>
+
